Reinstate the plugin-plugin. The nebula-core common.gradle approach turns out to be far more cumbersome than we thought